--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="name">이름</string>
     <string name="height">키</string>
     <string name="birth">생년월일</string>
-    <string name="birth_hint">ex)yyyy-MM-dd</string>
+    <string name="birth_hint">ex)yyyyMMdd</string>
     <string name="weight">몸무게</string>
     <string name="special">특이사항</string>
     <string name="gender">성별</string>
